--- a/reset-password.html
+++ b/reset-password.html
@@ -1,37 +1,44 @@
 <!DOCTYPE html>
 <html lang="vi">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Quên mật khẩu</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  <main class="page">
-    <section class="left">
-      <div class="panel">
-        
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Quên mật khẩu</title>
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <body>
+    <main class="page">
+      <section class="left">
+        <div class="panel">
+          <h1>Đặt lại mật khẩu</h1>
+          <p class="sub">
+            Nhập email, chúng tôi sẽ gửi hướng dẫn đặt lại mật khẩu.
+          </p>
 
-        <h1>Đặt lại mật khẩu</h1>
-        <p class="sub">Nhập email, chúng tôi sẽ gửi hướng dẫn đặt lại mật khẩu.</p>
+          <form>
+            <label for="email">Email</label>
+            <input
+              id="email"
+              type="email"
+              placeholder="Nhập email của bạn"
+              required
+            />
 
-        <form>
-          <label for="email">Email</label>
-          <input id="email" type="email" placeholder="Nhập email của bạn" required />
+            <button class="btn" type="submit" style="margin-top: 16px">
+              Gửi hướng dẫn
+            </button>
+          </form>
 
-          <button class="btn" type="submit" style="margin-top:16px">Gửi hướng dẫn</button>
-        </form>
+          <p class="signup" style="color: #ef4444; margin-top: 20px">
+            Quay lại
+            <a class="brand-link" href="login.html">Đăng nhập</a>
+          </p>
+        </div>
+      </section>
 
-        <p class="signup" style="color:#ef4444;margin-top:20px">
-          Quay lại
-          <a class="brand-link" href="login.html">Đăng nhập</a>
-        </p>
-      </div>
-    </section>
-
-    <aside class="right" aria-hidden="true">
-      <div class="hero"></div>
-    </aside>
-  </main>
-</body>
+      <aside class="right" aria-hidden="true">
+        <div class="hero"></div>
+      </aside>
+    </main>
+  </body>
 </html>
