--- a/home.html
+++ b/home.html
@@ -69,7 +69,7 @@
             </svg>
           </button>
 
-          <button class="act" title="Giỏ hàng">
+          <a href="shopping-cart.html" class="act" title="Giỏ hàng">
             <svg
               viewBox="0 0 24 24"
               width="18"
@@ -84,7 +84,8 @@
               <circle cx="9" cy="20" r="1.5" />
               <circle cx="17" cy="20" r="1.5" />
             </svg>
-          </button>
+          </a>
+
           <button class="act hide-sm" title="Đơn hàng">
             <svg
               viewBox="0 0 24 24"
