--- a/forgot.html
+++ b/forgot.html
@@ -5,7 +5,7 @@
     <title>Quên mật khẩu - Kênh Người Bán</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- Dùng chung CSS với các trang khác -->
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/login.css" />
   </head>
   <body>
     <div class="page">
