--- a/donhang-full.html
+++ b/donhang-full.html
@@ -63,7 +63,7 @@
               <span class="nav-badge red" id="orderNavBadge">5</span>
             </a>
 
-            <a href="#" class="nav-item">
+            <a href="khachhang-full.html" class="nav-item">
               <div class="nav-left">
                 <span class="nav-icon">👥</span>
                 <span class="nav-text">Khách hàng</span>
@@ -88,20 +88,20 @@
                 <span class="nav-text">Vận chuyển</span>
               </div>
             </a>
-            <a href="#" class="nav-item">
+            <a href="hoantien-full.html" class="nav-item">
               <div class="nav-left">
                 <span class="nav-icon">↩️</span>
                 <span class="nav-text">Hoàn tiền</span>
               </div>
               <span class="nav-badge red">3</span>
             </a>
-            <a href="#" class="nav-item">
+            <a href="khuyenmai-full.html" class="nav-item">
               <div class="nav-left">
                 <span class="nav-icon">🏷</span>
                 <span class="nav-text">Khuyến mãi</span>
               </div>
             </a>
-            <a href="#" class="nav-item">
+            <a href="flashsale-full.html" class="nav-item">
               <div class="nav-left">
                 <span class="nav-icon">⚡</span>
                 <span class="nav-text">Flash Sale</span>
@@ -112,7 +112,7 @@
           <!-- PHÂN TÍCH -->
           <div class="sidebar-section-label">PHÂN TÍCH</div>
           <nav class="sidebar-nav">
-            <a href="#" class="nav-item">
+            <a href="baocao-full.html" class="nav-item">
               <div class="nav-left">
                 <span class="nav-icon">📈</span>
                 <span class="nav-text">Báo cáo</span>
@@ -129,13 +129,13 @@
           <!-- THIẾT LẬP -->
           <div class="sidebar-section-label">THIẾT LẬP</div>
           <nav class="sidebar-nav">
-            <a href="#" class="nav-item">
+            <a href="cuahang-full.html" class="nav-item">
               <div class="nav-left">
                 <span class="nav-icon">🏪</span>
                 <span class="nav-text">Cửa hàng</span>
               </div>
             </a>
-            <a href="#" class="nav-item">
+            <a href="caidat-full.html" class="nav-item">
               <div class="nav-left">
                 <span class="nav-icon">⚙️</span>
                 <span class="nav-text">Cài đặt</span>
