--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               <span class="nav-badge red">12</span>
             </a>
 
-            <a href="#" class="nav-item">
+            <a href="khachhang-full.html" class="nav-item">
               <div class="nav-left">
                 <span class="nav-icon">👥</span>
                 <span class="nav-text">Khách hàng</span>
@@ -87,20 +87,20 @@
                 <span class="nav-text">Vận chuyển</span>
               </div>
             </a>
-            <a href="#" class="nav-item">
+            <a href="hoantien-full.html" class="nav-item">
               <div class="nav-left">
                 <span class="nav-icon">↩️</span>
                 <span class="nav-text">Hoàn tiền</span>
               </div>
               <span class="nav-badge red">3</span>
             </a>
-            <a href="#" class="nav-item">
+            <a href="khuyenmai-full.html" class="nav-item">
               <div class="nav-left">
                 <span class="nav-icon">🏷</span>
                 <span class="nav-text">Khuyến mãi</span>
               </div>
             </a>
-            <a href="#" class="nav-item">
+            <a href="flashsale-full.html" class="nav-item">
               <div class="nav-left">
                 <span class="nav-icon">⚡</span>
                 <span class="nav-text">Flash Sale</span>
@@ -111,7 +111,7 @@
           <!-- PHÂN TÍCH -->
           <div class="sidebar-section-label">PHÂN TÍCH</div>
           <nav class="sidebar-nav">
-            <a href="#" class="nav-item">
+            <a href="baocao-full.html" class="nav-item">
               <div class="nav-left">
                 <span class="nav-icon">📈</span>
                 <span class="nav-text">Báo cáo</span>
@@ -128,13 +128,13 @@
           <!-- THIẾT LẬP -->
           <div class="sidebar-section-label">THIẾT LẬP</div>
           <nav class="sidebar-nav">
-            <a href="#" class="nav-item">
+            <a href="cuahang-full.html" class="nav-item">
               <div class="nav-left">
                 <span class="nav-icon">🏪</span>
                 <span class="nav-text">Cửa hàng</span>
               </div>
             </a>
-            <a href="#" class="nav-item">
+            <a href="caidat-full.html" class="nav-item">
               <div class="nav-left">
                 <span class="nav-icon">⚙️</span>
                 <span class="nav-text">Cài đặt</span>
@@ -152,10 +152,7 @@
         <!-- FOOTER USER -->
         <div class="sidebar-footer">
           <div class="user">
-            <div class="avatar">
-              <img src="" alt="" onerror="this.style.display='none'" />
-              <span>NH</span>
-            </div>
+            <div class="avatar"><span>NH</span></div>
             <div class="user-info">
               <div class="user-name">Nguyễn Hoàng</div>
               <div class="user-role small">Premium Seller ▾</div>
@@ -180,7 +177,7 @@
           <div class="topbar-right">
             <button class="top-btn">🔔</button>
             <button class="top-btn">❓</button>
-            <button class="top-btn user-circle">A</button>
+            <button class="top-btn user-circle">NH</button>
           </div>
         </header>
 
@@ -572,5 +569,6 @@
     </div>
 
     <script src="js/scrip.js"></script>
+    <script src="js/user-info.js"></script>
   </body>
 </html>
